# transnormer

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README-new.md  README.md  compute_alignments.sh  dvc.yaml  pred_eval.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test_config.toml  train_model.sh  train_pred_eval.sh  training_config.toml  training_config_template.toml
.dvc/: config
.github/workflows/: syntax-and-unit-tests.yml
configs/test_configs/transnormer-19c-beta-v02/: test_config.toml
configs/training_configs/transnormer-18-19c-beta-v01/: training_config.toml
configs/training_configs/transnormer-19c-beta-v02/: training_config.toml
data/interim/: .gitignore  deu_news_2020.dvc  dtaeval.dvc  dtak-1600-1699.dvc  dtak-1700-1799.dvc  dtak-1800-1899.dvc  dtak-v03-1600-1699.dvc  dtak-v03-1700-1799.dvc  dtak-v03-1800-1899.dvc  ridges_bollmann.dvc
demo/: README.md  get-text-file.sh  process-text-file.py  transnormer.ipynb
models/: model.dvc
notebooks/: demo-pipeline.ipynb  demo.ipynb
notebooks/exploratory/: apply_finetuned_byt5.ipynb  apply_transnormer.ipynb  inspect_predictions.ipynb  inspect_predictions_model-2023-02-28.ipynb  minimal_example_byt5_problem.ipynb  minimal_example_byt5_problem.py  playground.ipynb  plot_loss.ipynb
notebooks/reports/: dataset-sizes.ipynb  dataset-sizes.tsv
src/transnormer/data/: loader.py  make_dataset.py  process.py  split_dataset.py
tests/: test_data_loading.py  test_data_process.py  test_evaluation_analysis.py  test_evaluation_type_alignment_stats.py  test_preprocess.py  test_train_model.py  test_visualization.py
(+32 files in other folders)
