[project]
name = "transnormer"
version = "0.1.0"
description = "A lexical normalizer for historical spelling variants using a transformer architecture."
authors = [
  { name = "Yannic Bracke (BBAW)", email = "yannic.bracke@bbaw.de" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9+",
    "Operating System :: OS Independent",
]
dependencies = [
    "datasets==2.18.0",
    "lxml>=4.9.2",
    "matplotlib>=3.6.3",
    "nltk>=3.8.1",
    "tomli>=2.0.1",
    "transformers[torch]>=4.31.0",
    "python_Levenshtein==0.21.1",
]

[project.urls]
"Homepage" = "https://github.com/ybracke/transnormer"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true
